FreeST/test/Programs/ValidTests/id/id.fst
id' : forall a : TU . a -> a
id' x = x

main : Int
main = id'[Int] 5


