FreeST/test/Programs/InvalidTests/Polymorphism/notEnoughPolyCall/poly.fst
id' : forall x . x -> x
id' c = c

main : Int
main =
  id' 5
